--- a/dashboard.html
+++ b/dashboard.html
@@ -429,6 +429,6 @@
       </div>
     </main>
 
-    <script src="dashboard.js"></script>
+    <script src="js/resuable.js"></script>
   </body>
 </html>
