--- a/index.html
+++ b/index.html
@@ -143,6 +143,6 @@
         </div>
       </div>
     </dialog>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
